fix: refine list styles for better consistency and readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,25 +204,23 @@ body {
     font-size: 1rem;
   }
   /* List styles */
-  ul,
-  ol {
+  ul {
+    list-style-type: disc;
     padding: 0 1rem;
     margin: 1.25rem 1rem 1.25rem 0.4rem;
   }
-  ul, li {
-    list-style-type: disc;
-    p {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
-    }
-  }
-  ol, li {
+
+  ol {
     list-style-type: decimal;
-    p {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
-    }
+    padding: 0 1rem;
+    margin: 1.25rem 1rem 1.25rem 0.4rem;
   }
+
+  li p {
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+  }
+
   /* Task list specific styles */
   ul[data-type='taskList'] {
     list-style: none;
